# mvr-player

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  build.py  pyproject.toml  requirements.txt
docs/: USER_GUIDE.md
mvr_player/: __init__.py  main.py
scripts/: build_windows.py
src/mvr_player/: __init__.py  app.py  converter.py  errors.py  ffmpeg_utils.py  main.py  player.py  settings.py  ui.py  utils.py
tests/: test_imports.py
